# intuitive-game-reasoning

./: .gitignore  LICENSE  README.md  demo.ipynb  demo_run_server_and_local.ipynb  main.py  pyproject.toml  requirements.txt
analysis/: admixture_utils.py  analysis_utils.py  constants.py  draw-combined.R  draw_process.ipynb  explore_variance.ipynb  figures_param_ablations.ipynb  figures_play_watch.ipynb  figures_think.ipynb  game2game_type.json  game2idx.json  param_fit_novice_think.ipynb  param_fit_novice_watch_play.ipynb  payoff.R  play_analyses.ipynb  post_experience_judgement_analyses.ipynb  process_human.ipynb  process_model_funness.ipynb  process_model_payoff.ipynb  watch_analyses.ipynb  watch_exp_example_boards.ipynb
analysis/funness/: generalization_test.R  main_funness_model.R  post_play.R  setup_helpers.R
analysis/game_info/: game_stimuli.json
analysis/surrenders_draws/: 2025-07-03_heuristic_search_eg.pkl  2025-07-07_surrenders_heuristic_search_eg.pkl  draws.py  draws_ablate_block_merged.pkl  draws_ablate_connect_block_merged.pkl  draws_ablate_connect_merged.pkl  draws_merged.pkl  draws_uni_random_merged.pkl  merge.py  run_draws.sh  run_surrenders.sh  surrenders.py  surrenders_ablate_block_merged.pkl  surrenders_ablate_connect_block_merged.pkl  surrenders_ablate_connect_merged.pkl  surrenders_merged.pkl  surrenders_uni_random_merged.pkl
human-data/play-exp/: play_human_fun.json
models/: utils.py
stimuli/: cogsci_just_think_stimuli.csv  human_human_pilot_stimuli.csv  parsable_stimuli_labels.csv  updated_final_play_game.csv  watch_game_stimuli.csv
(+701 files in other folders)
