[project]
name = "intuitive-game-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.setuptools]
packages = ["models", "stimuli", "analysis"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
